--- a/hackathon_starter/hackathon/templates/hackathon/index.html
+++ b/hackathon_starter/hackathon/templates/hackathon/index.html
@@ -204,8 +204,9 @@ function update_cart() {
                     <div class="intro-text">
                         <span class="name">Delivering the best prices <br> on cannabis since 2016</span>
   <hr>
-                        <span class="skills">Ask about our 30 gram ounces for 75$ and 4.6 gram eighths</span><br>
-                        <span class="skills">BayTree Express </span>
+                        <span class="skills">Ask about our 30 gram ounces for 75$</span><br>
+                        <span class="skills">Call us at (415) 650 - 8944 !</span><br>
+                        <span class="skills">Minimum 40$ order for delivery</span><br>
                     </div>
                 </div>
             </div>
@@ -477,7 +478,7 @@ function add_to_cart(str) {
                                      <button class="btn" style="margin-top:10px;font-size:12px" onClick="add_to_cart('gram')" id="item_gram"> Add to Cart </button>
                                     </div>
                                     <div class="col-md-3" style="text-align:left" id="select_nug_gram">5$</div>
-                                    <div class="col-md-5">for 1.2 grams</div>
+                                    <div class="col-md-5">for 1.2g gram</div>
                                   </div>
 
 
@@ -488,7 +489,7 @@ function add_to_cart(str) {
                                      <button class="btn" style="margin-top:10px;font-size:12px" onClick="add_to_cart('eighth')" id="item_eighth"> Add to Cart </button>
                                     </div>
                                     <div class="col-md-3" style="text-align:left" id="select_nug_eighth">5$</div>
-                                    <div class="col-md-5">for 4.6 gram eighth</div>
+                                    <div class="col-md-5">for 3.6g eighth</div>
                                   </div>
 
 
@@ -500,7 +501,7 @@ function add_to_cart(str) {
                                      <button class="btn" style="margin-top:10px;font-size:12px" onClick="add_to_cart('quad')" id="item_quad"> Add to Cart </button>
                                     </div>
                                     <div class="col-md-3" style="text-align:left" id="select_nug_quad">5$</div>
-                                    <div class="col-md-5">for 9 gram quad</div>
+                                    <div class="col-md-5">for 7.2g quarter</div>
                                   </div>
 
 
@@ -511,7 +512,7 @@ function add_to_cart(str) {
                                      <button class="btn" style="margin-top:10px;font-size:12px" onClick="add_to_cart('half')" id="item_half"> Add to Cart </button>
                                     </div>
                                     <div class="col-md-3" style="text-align:left" id="select_nug_half">5$</div>
-                                    <div class="col-md-5">for 18 grams half</div>
+                                    <div class="col-md-5">for 14.4g half</div>
                                   </div>
 
 
@@ -522,7 +523,7 @@ function add_to_cart(str) {
                                      <button class="btn" style="margin-top:10px;font-size:12px" onClick="add_to_cart('oz')" id="item_oz"> Add to Cart </button>
                                     </div>
                                     <div class="col-md-3" style="text-align:left" id="select_nug_oz">5$</div>
-                                    <div class="col-md-5">for 30 gram ounce</div>
+                                    <div class="col-md-5">for 30g ounce</div>
                                   </div>
                                   
                                   <br>
