--- a/hackathon_starter/hackathon/templates/hackathon/index.html
+++ b/hackathon_starter/hackathon/templates/hackathon/index.html
@@ -126,8 +126,32 @@
             <div class="row" id="cart_pin" style="padding-left:50px">
             <span> There's nothing here ! </span>
             </div>
-            <center><button class="btn"> Place Order </button></center>
+            <hr>
+            <div class='row' style="padding-left:50px">
+                <div class='col-md-6'>Total</div>
+                <div class='col-md-3'></div>
+                <div class='col-md-2' id="cart_total">0</div>
+                <div class='col-md-1'></div>
+            </div>
+            <hr style='margin:3px'>
+            <center><button class="btn" onClick="confirm_order()"> Confirm Order </button></center>
         </div>
+        <div id="address_form" style="display:none">
+            <h4>Enter your Shipping Address</h4>
+            <h6>We will only deliver to San Francisco</h6>
+            <h6>Estimated Delivery Times 60 - 90 minutes</h6>
+            <div class="row" id="cart_pin" style="padding-left:50px;padding-right:50px">
+            <input type="text" class="form-control" aria-describedby="sizing-addon3" id="u_address">
+            <input type="text" class="form-control" aria-describedby="sizing-addon3" value="San Francisco, CA" disabled>
+            <br>
+            </div>
+            <center><button class="btn" onClick="submit_order()"> Place Order </button></center>
+        </div>
+        <div id="confirmation_form" style="display:none">
+            <h4>Your order has been placed! Estimated Time of Delivery: 60 - 90 minutes</h4>
+            <h6>You will be emailed an invoice copy</h6>
+            <h6>Call us at (415) 650 - 8944 for any questions</h6>
+        </div>                
         <iframe width="0" height="0" border="0" name="dummyframe" id="dummyframe"></iframe>
       </div>
       <div class="modal-footer">
@@ -138,6 +162,7 @@
 </div>
 <script>
 let cart = []
+let total = 0
 function register() {
     $("#login_form").fadeOut(250)
     $("#loading_form").fadeIn(250)
@@ -148,6 +173,7 @@ function register() {
         method: 'POST',
         data: {'email': email, 'password': password}
     }).done(function(x) {
+        localStorage.setItem('token',JSON.stringify({'t':x.token}))
         if (x.error !== 'error') {
             if (String(x.user) == String(email)) {
                 $("#user")[0].value = String(x.user)
@@ -172,7 +198,7 @@ function login() {
         method: 'POST',
         data: {'email': email, 'password': password}
     }).done(function(x) {
-        console.log(x)
+        localStorage.setItem('token',JSON.stringify({'t':x.token}))
         if (x.error !== 'error') {
             if (String(x.user) == String(email)) {
                 open_shop()
@@ -189,26 +215,46 @@ function open_shop() {
     }, 2000);
 }
 function remove_cart(i) {
-    console.log(i)
     if (i == 0 && cart.length == 1) {
         $("#cart_pin")[0].innerHTML = ""
         cart = []    
+        $("#cart_total")[0].innerText = "$" + 0
     } else {
         cart.splice(i,1)
         $("#cart_pin")[0].innerHTML = ""
         cart.forEach(function(item, i) {
-            $("#cart_pin").append("<div class='row'><div class='col-md-6'>"+String(item.strain)+"</div><div class='col-md-3'>"+String(item.qty)+"</div><div class='col-md-2'>"+String(item.price)+"</div><div class='col-md-1'><i class='fa fa-trash' onClick='remove_cart(" +String(i) + ")'></i></div></div></div><hr style='margin:3px'>")
+            $("#cart_pin").append("<div class='row'><div class='col-md-6'>"+String(item.strain)+"</div><div class='col-md-3'>"+String(item.qty)+"</div><div class='col-md-2'>$"+String(item.price)+"</div><div class='col-md-1'><i class='fa fa-trash' onClick='remove_cart(" +String(i) + ")'></i></div></div></div><hr style='margin:3px'>")
         })
-        
+        total = 0
+        cart.forEach(function(x) {
+            total += Number(x.price)
+        })
+        $("#cart_total")[0].innerText = "$" + total
     }
 
 }
 function update_cart() {
-    console.log(cart)
+    
     $("#cart_pin")[0].innerHTML = ""
     cart.forEach(function(item, i) {
-        $("#cart_pin").append("<div class='row'><div class='col-md-6'>"+String(item.strain)+"</div><div class='col-md-3'>"+String(item.qty)+"</div><div class='col-md-2'>"+String(item.price)+"</div><div class='col-md-1'><i class='fa fa-trash' onClick='remove_cart(" +String(i) + ")'></i></div></div></div><hr style='margin:3px'>")
+        $("#cart_pin").append("<div class='row'><div class='col-md-6'>"+String(item.strain)+"</div><div class='col-md-3'>"+String(item.qty)+"</div><div class='col-md-2'>$"+String(item.price)+"</div><div class='col-md-1'><i class='fa fa-trash' onClick='remove_cart(" +String(i) + ")'></i></div></div></div><hr style='margin:3px'>")
     })
+}
+function submit_order() {
+    $.ajax({
+        url: 'submit_order/',
+        method: 'POST',
+        data: {'cart': JSON.stringify(cart), 'address': $("#u_address").val() , 'token': JSON.parse(localStorage.getItem('token')).t }
+    }).done(function(x) {
+        if (x.action == 'complete') {
+            $("#address_form").fadeOut(250)
+            $("#shopping_cart").fadeOut(250)
+            $("#confirmation_form").fadeIn(250)
+        }
+    })
+}
+function confirm_order() {
+    $("#address_form").fadeIn(250)
 }
 
 </script>
@@ -266,6 +312,11 @@ function add_to_cart(str) {
         'price' : price
     }
     cart.push(item)
+    total = 0
+    cart.forEach(function(x) {
+        total += Number(x.price)
+    })
+    $("#cart_total")[0].innerText = "$" + total
     $("#number_of_items")[0].innerText = cart.length
 }
 function reset_menu() {
@@ -392,9 +443,6 @@ function reset_menu() {
                     <p>We offer the best prices in San Francisco, and delivery times within an hour. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline" style="color:white;font-weight:100;letter-spacing:2px">
-   Register Now
-                    </a>
                 </div>
             </div>
         </div>
